--- a/dice.html
+++ b/dice.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="dice.css">
 </head>
 <body>
+    this is demo
+    
     <label id="xlabel"></label><br>
     <label id="ylabel"></label><br>
     <label id="zlabel"></label><br>
